--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+THIS IS NO LONGER MAINTAINED
+===
+Please check out https://github.com/MithicSpirit/dmenu-mithic instead
+
 dmenu - dynamic menu
 ====================
 dmenu is an efficient dynamic menu for X.
